making checkbox inline

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                 <input type="password" id="password" name="password" placeholder="Password">
             </fieldset>
 
-            <fieldset>
+            <fieldset class="checkbox newsletter-signup">
 
                 <input type="checkbox" id="newsletter-signup">
-                <label class="inline" for="newsletter-signup">Receive a weekly mix of handpicked projects, plus
+                <label for="newsletter-signup">Receive a weekly mix of handpicked projects, plus
                     occasional news.</label>
             </fieldset>
 
