--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Sign Up Form With Validation</title>
 
 </head>
@@ -27,7 +27,6 @@
         </div>
 
         <h2>Sign-Up</h2>
-
 
         <form class="signup" action="index.html">
 
@@ -58,7 +57,7 @@
             </fieldset>
 
             <fieldset>
-                <input type="submit" name="submit" class="button_primary value=" Create Account">
+                <input type="submit" name="submit" value="Create Account" class="button_primary">
             </fieldset>
 
             <div class="privacy-message">By signing up, you agree to our <a href="#">terms of use</a>, <a
@@ -67,7 +66,7 @@
 
             <div class="read-more">
 
-                <a href="#">Read more</a>
+                <a href="./submitted.html">Read more</a>
 
             </div>
 
@@ -77,7 +76,7 @@
 
     </div>
 
-    <script src="app.js"></script>
+    <script src="./js/main.js" defer></script>
 </body>
 
 </html>
