add thanks page styling and diable form on load

--- a/src/submitted.html
+++ b/src/submitted.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="thanks-container">
 
     <h2>Thanks for submitting</h2>
     <p>Please check you email and confirm you email address...</p>
