remove error messages for later refactoring

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
             </fieldset>
 
             <fieldset>
-                <input type="submit" name="submit" value="Create Account" class="button_primary">
+                <input type="submit" name="submit" value="Create Account" class="button_primary" disabled>
             </fieldset>
 
             <div class="privacy-message">By signing up, you agree to our <a href="#">terms of use</a>, <a
@@ -69,7 +69,6 @@
                 <a href="./submitted.html">Read more</a>
 
             </div>
-
 
         </form>
 
